src/objects/ZZPhaseInstance__c.object
<CustomObject>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <referenceTo>ZZPhaseModel__c</referenceTo>
        <relationshipLabel>ZZPhaseInstances</relationshipLabel>
        <relationshipName>ZZPhaseInstances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>On_Going_Action__c</fullName>
        <label>On Going Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parameters__c</fullName>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Values__c</fullName>
        <inlineHelpText>Map&lt;String, String&gt; in json format, name -&gt; value</inlineHelpText>
        <label>Return Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workflow__c</fullName>
        <label>Workflow</label>
        <referenceTo>ZZWorkflowInstance__c</referenceTo>
        <relationshipLabel>ZZPhaseInstances</relationshipLabel>
        <relationshipName>ZZPhaseInstances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ZZPhaseInstance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ZZPhaseInstance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZPhaseInstances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>